<resources>
    <string name="app_name">School Attendance App</string>
    <string name="name_hint">Enter name</string>
    <string name="email_hint">Enter email</string>
    <string name="Password_hint">Enter password</string>
    <string name="phone_number_hint">Enter phone number</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
</resources>